--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Build
       run: |
         python -m pip install --upgrade pip
-        pip install . -e
+        pip install -e .
     - name: Lint
       run: |
         flake8 main.py --count --show-source --statistics
